# LLaMA-Adapter

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  generate.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
alpaca_finetuning_v1/: download.sh  engine_finetuning.py  extract_adapter_from_checkpoint.py  finetuning.py  finetuning_llama_adapter.sh  models_llama_adapter.py
alpaca_finetuning_v1/llama/: .model.py.swp  generation.py  model.py
docs/: langchain_LLaMA_AdapterV2_demo.ipynb  langchain_integration.md
gorilla/: README.md
gorilla/alpaca_finetuning_v1/: engine_finetuning.py  extract_adapter_from_checkpoint.py  finetuning.py  finetuning_hf.sh  finetuning_tf.sh  finetuning_th.sh  models_llama_adapter.py
gorilla/finetune/: conversation.py  data_preprocess.py  demo.py  engine_finetune.py  engine_pretrain.py  global_configs.py  main_finetune.py  main_pretrain.py  params.json  submitit_pretrain.py  transformer.py
gorilla/inference/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  MODEL_CARD.md  README.md  download.sh  (+5 more)
imagebind_LLM/: README.md  convert_ckpt.py  demo.py  demo_3d.py  engine_finetune.py  gradio_app.py  image_generate.py  main_finetune.py  main_pretrain.py  requirements.txt
llama/: model.py
llama_adapter_v2_chat65b/: README.md  chat_demo.py  conversation.py  environment.yml  models_llama_adapter.py
llama_adapter_v2_multimodal/: README.md  demo.py  engine_pretrain.py  gradio_app.py  main_pretrain.py
llama_adapter_v2_multimodal7b/: README.md  demo.py  main_finetune.py  requirements.txt
utils/: quantization.py
(+73 files in other folders)
